Add project gif